test/log/reduction/vrmin_v_u16_m.txt
vrmin_v_u16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrmin_v_u16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrmin_v_u16_m.c:30:6: warning: no previous prototype for 'vrmin_v_u16_m_golden' [-Wmissing-prototypes]
   30 | void vrmin_v_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vrmin_v_u16_m.c: In function 'vrmin_v_u16_m_golden':
vrmin_v_u16_m.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrmin_v_u16_m.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrmin_v_u16_m.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrmin_v_u16_m.c: In function 'main':
vrmin_v_u16_m.c:37:14: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   37 |     bool32_t mask;
      |              ^~~~
vrmin_v_u16_m.c:30:37: note: shadowed declaration is here
   30 | void vrmin_v_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *exp_result) {
      |                           ~~~~~~~~~~^~~~
vrmin_v_u16_m.c:38:17: warning: declaration of 'maskoff' shadows a parameter [-Wshadow]
   38 |     uint16x32_t maskoff;
      |                 ^~~~~~~
vrmin_v_u16_m.c:30:52: note: shadowed declaration is here
   30 | void vrmin_v_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *exp_result) {
      |                                          ~~~~~~~~~~^~~~~~~
vrmin_v_u16_m.c:39:17: warning: declaration of 'a' shadows a parameter [-Wshadow]
   39 |     uint16x32_t a;
      |                 ^
vrmin_v_u16_m.c:30:70: note: shadowed declaration is here
   30 | void vrmin_v_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *exp_result) {
      |                                                            ~~~~~~~~~~^
vrmin_v_u16_m.c:45:14: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   45 |     uint16_t exp_result[32] = {0};
      |              ^~~~~~~~~~
vrmin_v_u16_m.c:30:82: note: shadowed declaration is here
   30 | void vrmin_v_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *exp_result) {
      |                                                                        ~~~~~~~~~~^~~~~~~~~~
vrmin_v_u16_m.c:47:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   47 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrmin_v_u16_m.c:55:28: error: incompatible type for argument 1 of 'vrmin_v_u16_m'
   55 |     result = vrmin_v_u16_m(mask,maskoff,a);
      |                            ^~~~
      |                            |
      |                            bool32_t
In file included from vrmin_v_u16_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1920:1: note: expected 'bool32x2_t' but argument is of type 'bool32_t'
 1920 | __RUGRATS_REDUC_V_OP (rmin, u, uint, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~
vrmin_v_u16_m.c: In function 'vrmin_v_u16_m_golden':
vrmin_v_u16_m.c:75:1: error: expected declaration or statement at end of input
   75 | }
      | ^
vrmin_v_u16_m.c:30:37: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vrmin_v_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *exp_result) {
      |                           ~~~~~~~~~~^~~~
vrmin_v_u16_m.c:30:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vrmin_v_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *exp_result) {
      |                                          ~~~~~~~~~~^~~~~~~
vrmin_v_u16_m.c:30:70: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrmin_v_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *exp_result) {
      |                                                            ~~~~~~~~~~^
vrmin_v_u16_m.c:30:82: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrmin_v_u16_m_golden(uint64_t *mask,uint16_t *maskoff,uint16_t *a,uint16_t *exp_result) {
      |                                                                        ~~~~~~~~~~^~~~~~~~~~
At top level:
vrmin_v_u16_m.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmin_v_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrmin_v_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrmin_v_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmin_v_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed